log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
        - name: config-volume
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
          - name: generator
            image: joelheusala/log-output-generator:1.10
            imagePullPolicy: Always
            volumeMounts:
              - name: shared-image
                mountPath: /shared
          - name: reader
            image: joelheusala/log-output-reader:2.5
            imagePullPolicy: Always
            volumeMounts:
              - name: shared-image
                mountPath: /shared
              - name: config-volume
                mountPath: /config
